# pogodecode

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  build_windows.bat  pogodecode.spec  pyproject.toml  requirements.txt  run_gui.py  run_viewer.py  version_info.txt
.github/workflows/: build.yml  data-refresh.yml
docs/: BUGS.md  INTEGRATION.md  LEGAL.md  METHODOLOGY.md  make_mockups.py
docs/updates/: CHANGELOG-ee75db6f.md
pogodecode/: __init__.py  _config.py  _icon.py  _theme.py  cli.py  dexcli.py  gamemaster.py  gui.py  pokedex.py  protobuf_decoder.py  viewer.py
tests/: test_decoder.py  test_pokedex.py
